# llm-client

./: Cargo.toml  LICENSE  README.md
.github/workflow/: release.yaml
.github/workflows/: release.yaml
src/: commands.rs  highlighting.rs  logging.rs  main.rs  messaging.rs  parsing.rs  rendering.rs  text_processing.rs
src/rendering/: regexes.rs  table.rs
