[package]
name = "llm-client"
version = "0.3.0"
edition = "2024"
authors = ["hardglitch"]

[dependencies]
ureq = "3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termimad = "0.34"
unicode-normalization = "0.1"
syntect = "5"
regex = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
